--- a/src/InstrumentationEngine/CMakeLists.txt
+++ b/src/InstrumentationEngine/CMakeLists.txt
@@ -7,8 +7,13 @@ project(InstrumentationEngine)
 
 find_package(LibXml2 REQUIRED)
 
-include_directories(. ../InstrumentationEngine.Lib ${LIBXML2_INCLUDE_DIR})
+find_package(PkgConfig REQUIRED)
 
+pkg_search_module(UUID REQUIRED uuid)
+
+include_directories(. ../InstrumentationEngine.Lib ${LIBXML2_INCLUDE_DIR} ${UUID_INCLUDE_DIRS})
+
+link_directories(/usr/local/opt/util-linux/lib/)
 build_init(CPP InstrumentationEngine)
 
 set(src_files
@@ -62,10 +67,10 @@ add_lib(${PROJECT_NAME}
     )
 
 # Force every object to be included even if it's unused.
-SET (ATL -Wl,--whole-archive atl -Wl,--no-whole-archive)
-SET (CORECLRPAL -Wl,--whole-archive coreclrpal -Wl,--no-whole-archive)
-SET (LINUXPAL -Wl,--whole-archive linux_pal -Wl,--no-whole-archive)
-#SET (LINUXPALRT -Wl,--whole-archive palrt -Wl,--no-whole-archive)
+SET (ATL atl)
+SET (CORECLRPAL coreclrpal)
+SET (LINUXPAL linux_pal)
+#SET (LINUXPALRT palrt)
 
 
 # For some reason linking against musl-libc we need libintl and on glibc we need libdl.
@@ -75,22 +80,22 @@ if(CLR_CMAKE_PLATFORM_ALPINE_LINUX)
 else()
     # NOTE: Explicitly link to the .so version of libdl.so to make sure we don't somehow accidentally
     # start statically linking to these, as these are LGPL components.
-    target_link_libraries(${PROJECT_NAME} :libdl.so)
+    target_link_libraries(${PROJECT_NAME} ${CMAKE_DL_LIBS})
 endif()
 
 target_link_libraries(${PROJECT_NAME}
     pthread
     stdc++
     ${LIBXML2_LIBRARIES}
-    ${CORECLRPAL}
+#    ${CORECLRPAL}
     ${LINUXPAL}
     ${ATL}
-    palrt
+#    palrt
     InstrumentationEngine.Api
     InstrumentationEngine.Lib
     corguids
-    :libuuid.so
-    :libunwind-x86_64.so
+    /usr/local/opt/util-linux/lib/libuuid.dylib
+    /usr/local/Cellar/llvm/11.0.0_1/lib/libunwind.dylib
     )
 
 #ensure that the linux pal gets built before this
