--- a/src/unix/dependencies/nuget.config
+++ b/src/unix/dependencies/nuget.config
@@ -5,5 +5,6 @@
   <packageSources>
     <clear />
     <add key="ClrInstrumentationEngine-Dependency" value="https://pkgs.dev.azure.com/ms/CLRInstrumentationEngine/_packaging/ClrInstrumentationEngine-Dependency/nuget/v3/index.json" />
+    <add key="ClrInstrumentationEngine-Dependencylocal" value="/Users/jachocho/nuget" />
   </packageSources>
 </configuration>
